k8s/spring/overlays/prod/preview-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway-service-preview
  namespace: urr-spring
spec:
  selector:
    app: gateway-service
  ports:
    - port: 3001
      targetPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: ticket-service-preview
  namespace: urr-spring
spec:
  selector:
    app: ticket-service
  ports:
    - port: 3002
      targetPort: 3002
---
apiVersion: v1
kind: Service
metadata:
  name: payment-service-preview
  namespace: urr-spring
spec:
  selector:
    app: payment-service
  ports:
    - port: 3003
      targetPort: 3003
---
apiVersion: v1
kind: Service
metadata:
  name: queue-service-preview
  namespace: urr-spring
spec:
  selector:
    app: queue-service
  ports:
    - port: 3007
      targetPort: 3007
